added additional observations and fixed typo

--- a/rainfall_prediction.ipynb
+++ b/rainfall_prediction.ipynb
@@ -1077,7 +1077,7 @@
    "source": [
     "Observations:\n",
     "1. Almost in all states maximum rainfall is in June, July, August and September month group.\n",
-    "2. Almost in all states maximum rainfall is in January and February month group.\n",
+    "2. Almost in all states minimum rainfall is in January and February month group.\n",
     "3. In Pondicherry and Tamilnadu rainfall in OND month group is greater than JJAS month group.\n",
     "4. In east states there is significant rainfall in MAM month group."
    ]
@@ -1109,6 +1109,15 @@
     "plt.show()\n",
     "fig = plot.get_figure()\n",
     "fig.savefig('Plot/STATE_UT Average RainFall Month wise Bar Graph', dpi=300, bbox_inches='tight')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Observations:\n",
+    "1. There is significant rainfall in all 12 months in Andaman and Nicobar Islands and Arunachal Pradesh.\n",
+    "2. There is significant rainfall in January month in Jammu and Kashmir and Himachal."
    ]
   },
   {
@@ -1145,8 +1154,8 @@
    "metadata": {},
    "source": [
     "Observations:\n",
-    "1. There is significant rainfall in all 12 months in Andaman and Nicobar Island and Arunachal Pradesh.\n",
-    "2. There is significant rainfall in all January month in Jammu and Kashmir and Himachal."
+    "1. Almost in all states maximum rainfall is in JJAS month group.\n",
+    "2. In Pondicherry and Andman and Nicobar Islands rainfall in OND month group is highest."
    ]
   },
   {
